# canopy-python

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  OPENAPI_README.md  PYPI_README.md  README.md  SWAGGER_README.md  azure-pipelines.yml  canopy-swagger-no-allof.json  generate_client.sh  liccheck.ini  print_packages_and_licenses.py  pyproject.toml  pytest.ini  requirements.txt  scratch.ipynb  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
canopy/: __init__.py  __main__.py  api.py  authentication.py  authentication_data.py  block.py  config_result.py  constants.py  create_config.py  create_list_filter.py  create_study.py  defined_kwargs.py  delete_config.py  delete_study.py  dict_to_object.py  dict_to_object_test.py  dynamic_dict_to_object.py  ensure_dict.py  ensure_sim_type_string.py  ensure_sim_type_string_test.py  ensure_study_type_string.py  ensure_study_type_string_test.py  find_config.py  find_study.py  get_default_config_path.py  get_study_document.py  get_study_type_definition_for_sim_version.py  get_study_type_definition_for_sim_version_test.py  job_count_to_simulation_count.py  load_channel.py  load_channels.py  load_config.py  load_default_config.py  load_study.py  load_study_data.py  load_study_job.py  load_study_job_data.py  load_study_job_scalar_results.py  load_study_scalar_results.py  load_vector_metadata.py  (+37 more)
docs/: AccountSettingsApi.md  AccountSettingsPutRequest.md  AdditionalTests.md  AdminTenantSettings.md  AdminTenantSettingsBuilder.md  AdminTenantSettingsPoolSettings.md  AllocationState.md  AutoScaleRun.md  (+335 more)
(+560 files in other folders)
