[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
version = "0.1.1"
description = "Python Client for the Canopy Simulation API"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Canopy API", "Canopy Simulations", "Canopy Client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "certifi>=2017.4.17",
    "six>=1.10",
    "python-dateutil>=2.1",
    "urllib3>=1.23",
    "pandas>=0.25.1",
    "aiohttp",
    "munch"
]

[tool.setuptools]
packages.find = { where = ["."] }

[project.urls]
Repository = "https://github.com/canopysimulations/canopy-python/"
